src/components/Game.module.css
.game {
	min-height: 100vh;
	display: grid;
}

.versus_circle {
	color: var(--color-neutral-100);
	position: absolute;
	left: 50%;
	top: 50%;
	transform: translate(-50%, -50%);
	width: 100px;
	height: 100px;
	background-color: var(--color-neutral-900);
	border-style: solid;
	border-color: var(--color-neutral-100);
	border-radius: 50%;
	display: flex;
	justify-content: center;
	align-items: center;
}

.versus_text {
	font-size: 2rem;
	line-height: 2rem;
}

.back {
	display: flex;
	align-items: center;
	position: absolute;
	top: 5px;
	left: 5px;
	color: var(--color-neutral-100);
	background-color: var(--color-neutral-900);
	border-radius: 3px;
	padding: 10px 10px;
	border: none;
}

.back:hover {
	background-color: var(--color-secondary);
}

.backArrow {
	height: 25px;
	width: 25px;
}

.score {
	position: absolute;
	bottom: 10px;
	left: 10px;
	font-size: 1.5rem;
}

@media screen and (max-width: 768px) {
  .game {
		grid-template-rows: 1fr 1fr;
	}

	.versus_circle {
		width: 70px;
		height: 70px;
	}
}

@media screen and (min-width: 768px) {
  .game {
		grid-template-columns: 1fr 1fr;
	}
}

